--- a/anime/The_Curious_Case_of_Benjamin_Button_2008_Hindi.html
+++ b/anime/The_Curious_Case_of_Benjamin_Button_2008_Hindi.html
@@ -38,18 +38,19 @@
     }
   </style>
 </head>
+
 <body class="bg-black text-white font-mono">
 
-  <div class="p-6">
-    <h1 class="text-4xl font-bold text-pink-600">The Curious Case of Benjamin Button (2008) Hindi</h1>
-    <p class="text-gray-400 mb-6">The Curious Case of Benjamin Button (2008) Hindi</p>
+  <div class="max-w-4xl mx-auto p-6">
+    <h1 class="text-4xl font-bold text-pink-600 mb-2">The Curious Case of Benjamin Button (2008) Hindi</h1>
+    <p class="text-gray-400 mb-6">Hindi Dubbed Full Movie</p>
 
     <!-- Video Player -->
-    <div class="mb-4">
+    <div class="mb-6">
       <iframe id="videoPlayer" src="https://drive.google.com/file/d/19OFECzh-kbph92bSJ9WpsanhaFkpzXAE/preview" width="100%" height="400" frameborder="0" allow="autoplay" allowfullscreen class="rounded shadow"></iframe>
-      <div class="mt-2">
+      <div class="mt-3">
         <h2 id="episodeTitle" class="text-xl font-semibold">The Curious Case of Benjamin Button (2008) Hindi</h2>
-        <p id="episodeDesc" class="text-gray-400">The Curious Case of Benjamin Button (2008) Hindi</p>
+        <p id="episodeDesc" class="text-gray-400">Hindi Dubbed Full Movie</p>
         <p id="uploadDate" class="text-gray-600 text-sm">Uploaded: 2025-04-25</p>
       </div>
     </div>
@@ -57,38 +58,23 @@
     <!-- Episode List -->
     <div id="episodeList" class="space-y-3"></div>
 
-    <!-- New Separate Ad Placement -->
-    <div class="mt-6">
+    <!-- Static Banner Placement -->
+    <div class="mt-8">
       <script async="async" data-cfasync="false" src="//pl26487204.profitableratecpm.com/9c8a5fd343f0c339fdb71a4da43f3a35/invoke.js"></script>
       <div id="container-9c8a5fd343f0c339fdb71a4da43f3a35"></div>
     </div>
-
   </div>
 
-  <!-- Ad Box (old rotating ads) -->
+  <!-- Floating Ad Box -->
   <div id="adBox">
     <button id="closeAd" aria-label="Close ad">×</button>
+
     <div class="ad-slot active" id="ad1">
-      <iframe
-        src="https://www.profitableratecpm.com/n7eqkd8462?key=d1bf84aaada8c239b6538b9e4ff2781a"
-        width="100%"
-        height="90"
-        frameborder="0"
-        scrolling="no"
-        allowfullscreen>
-      </iframe>
+      <iframe src="https://www.profitableratecpm.com/n7eqkd8462?key=d1bf84aaada8c239b6538b9e4ff2781a" width="100%" height="90" frameborder="0" scrolling="no" allowfullscreen></iframe>
     </div>
+
     <div class="ad-slot" id="ad2">
-      <script type="text/javascript">
-        atOptions = {
-          'key': '38c97041ba09133421880a5339a162a8',
-          'format': 'iframe',
-          'height': 90,
-          'width': 728,
-          'params': {}
-        };
-      </script>
-      <script src="//www.highperformanceformat.com/38c97041ba09133421880a5339a162a8/invoke.js"></script>
+      <iframe src="//www.highperformanceformat.com/38c97041ba09133421880a5339a162a8/invoke.js" width="100%" height="90" frameborder="0" scrolling="no" allowfullscreen></iframe>
     </div>
   </div>
 
@@ -99,7 +85,7 @@
       {
         title: "The Curious Case of Benjamin Button (2008) Hindi",
         link: "https://drive.google.com/file/d/19OFECzh-kbph92bSJ9WpsanhaFkpzXAE/preview",
-        description: "The Curious Case of Benjamin Button (2008) Hindi",
+        description: "Hindi Dubbed Full Movie",
         uploadDate: "2025-04-25"
       }
     ];
@@ -123,7 +109,7 @@
       list.appendChild(btn);
     });
 
-    // Rotate ads
+    // Ad rotation
     let currentAd = 1;
     setInterval(() => {
       document.querySelectorAll('.ad-slot').forEach(el => el.classList.remove('active'));
@@ -131,16 +117,18 @@
       document.getElementById(`ad${currentAd}`).classList.add('active');
     }, 10000);
 
-    // Draggable Ad Box
+    // Draggable floating ad
     (function() {
       const box = document.getElementById('adBox');
       let offsetX, offsetY, dragging = false;
+
       box.addEventListener('mousedown', e => {
         dragging = true;
         offsetX = e.clientX - box.offsetLeft;
         offsetY = e.clientY - box.offsetTop;
         document.body.style.userSelect = 'none';
       });
+
       document.addEventListener('mousemove', e => {
         if (!dragging) return;
         box.style.left = `${e.clientX - offsetX}px`;
@@ -148,16 +136,18 @@
         box.style.bottom = 'auto';
         box.style.right = 'auto';
       });
+
       document.addEventListener('mouseup', () => {
         dragging = false;
         document.body.style.userSelect = '';
       });
     })();
 
-    // Close ad
+    // Close ad box
     document.getElementById('closeAd').addEventListener('click', () => {
       document.getElementById('adBox').style.display = 'none';
     });
   </script>
+
 </body>
-    </html>
+</html>
