--- a/anime/The_Dark_Knight.html
+++ b/anime/The_Dark_Knight.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>The_Dark_Knight_2008_Hindi_Dubbed_Full_Movie.mp4’</title>
+  <title>The Dark Knight (2008) Hindi Dubbed Full Movie</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
     #adBox {
@@ -38,18 +38,18 @@
     }
   </style>
 </head>
-<body class="bg-black text-white font-mono">
 
+<body class="bg-black text-white font-mono">
   <div class="p-6">
-    <h1 class="text-4xl font-bold text-pink-600">The_Dark_Knight_2008_Hindi_Dubbed_Full_Movie.mp4</h1>
-    <p class="text-gray-400 mb-6">The_Dark_Knight_2008_Hindi_Dubbed_Full_Movie.mp4</p>
+    <h1 class="text-4xl font-bold text-pink-600">The Dark Knight (2008) Hindi Dubbed Full Movie</h1>
+    <p class="text-gray-400 mb-6">Watch The Dark Knight (2008) Hindi Dubbed Full Movie Online</p>
 
     <!-- Video Player -->
     <div class="mb-4">
       <iframe id="videoPlayer" src="https://drive.google.com/file/d/1Bzpr3j3Gt0TA3Nnd743cGE0qfD9SmLyo/preview" width="100%" height="400" frameborder="0" allow="autoplay" allowfullscreen class="rounded shadow"></iframe>
       <div class="mt-2">
-        <h2 id="episodeTitle" class="text-xl font-semibold">The_Dark_Knight_2008_Hindi_Dubbed_Full_Movie.mp4</h2>
-        <p id="episodeDesc" class="text-gray-400">The_Dark_Knight_2008_Hindi_Dubbed_Full_Movie.mp4</p>
+        <h2 id="episodeTitle" class="text-xl font-semibold">The Dark Knight (2008) Hindi Dubbed Full Movie</h2>
+        <p id="episodeDesc" class="text-gray-400">Full Hindi Dubbed Version</p>
         <p id="uploadDate" class="text-gray-600 text-sm">Uploaded: 2025-04-25</p>
       </div>
     </div>
@@ -59,24 +59,16 @@
 
     <!-- New Separate Ad Placement -->
     <div class="mt-6">
-      <script async="async" data-cfasync="false" src="//pl26487204.profitableratecpm.com/9c8a5fd343f0c339fdb71a4da43f3a35/invoke.js"></script>
+      <script async data-cfasync="false" src="//pl26487204.profitableratecpm.com/9c8a5fd343f0c339fdb71a4da43f3a35/invoke.js"></script>
       <div id="container-9c8a5fd343f0c339fdb71a4da43f3a35"></div>
     </div>
-
   </div>
 
-  <!-- Ad Box (old rotating ads) -->
+  <!-- Ad Box -->
   <div id="adBox">
     <button id="closeAd" aria-label="Close ad">×</button>
     <div class="ad-slot active" id="ad1">
-      <iframe
-        src="https://www.profitableratecpm.com/n7eqkd8462?key=d1bf84aaada8c239b6538b9e4ff2781a"
-        width="100%"
-        height="90"
-        frameborder="0"
-        scrolling="no"
-        allowfullscreen>
-      </iframe>
+      <iframe src="https://www.profitableratecpm.com/n7eqkd8462?key=d1bf84aaada8c239b6538b9e4ff2781a" width="100%" height="90" frameborder="0" scrolling="no" allowfullscreen></iframe>
     </div>
     <div class="ad-slot" id="ad2">
       <script type="text/javascript">
@@ -92,14 +84,14 @@
     </div>
   </div>
 
-  <script type="text/javascript">
+  <script>
     window.onbeforeunload = null;
 
     const episodes = [
       {
-        title: "The_Dark_Knight_2008_Hindi_Dubbed_Full_Movie.mp4",
+        title: "The Dark Knight (2008) Hindi Dubbed Full Movie",
         link: "https://drive.google.com/file/d/1Bzpr3j3Gt0TA3Nnd743cGE0qfD9SmLyo/preview",
-        description: "The_Dark_Knight_2008_Hindi_Dubbed_Full_Movie.mp4",
+        description: "Full Hindi Dubbed Version",
         uploadDate: "2025-04-25"
       }
     ];
@@ -154,7 +146,7 @@
       });
     })();
 
-    // Close ad
+    // Close Ad
     document.getElementById('closeAd').addEventListener('click', () => {
       document.getElementById('adBox').style.display = 'none';
     });
