--- a/anime/chainsaw man.html
+++ b/anime/chainsaw man.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>chainsaw man all episodes in one video+ movie</title>
+  <title>Chainsaw Man - All Episodes + Movie</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
     #adBox {
@@ -41,15 +41,15 @@
 <body class="bg-black text-white font-mono">
 
   <div class="p-6">
-    <h1 class="text-4xl font-bold text-pink-600">chainsaw man all episodes in one video+ movie</h1>
-    <p class="text-gray-400 mb-6">chainsaw man all episodes in one video+ movie</p>
+    <h1 class="text-4xl font-bold text-pink-600">Chainsaw Man - All Episodes + Movie</h1>
+    <p class="text-gray-400 mb-6">Watch Chainsaw Man complete series and movie in one video!</p>
 
     <!-- Video Player -->
     <div class="mb-4">
       <iframe id="videoPlayer" src="https://drive.google.com/file/d/1EFLsCYYSZ_0W0ovHCepvqUFIrZXEaH-V/preview" width="100%" height="400" frameborder="0" allow="autoplay" allowfullscreen class="rounded shadow"></iframe>
       <div class="mt-2">
-        <h2 id="episodeTitle" class="text-xl font-semibold">chainsaw man all episodes in one video+ movie</h2>
-        <p id="episodeDesc" class="text-gray-400">chainsaw man all episodes in one video+ movie</p>
+        <h2 id="episodeTitle" class="text-xl font-semibold">Chainsaw Man - Full Video</h2>
+        <p id="episodeDesc" class="text-gray-400">Chainsaw Man - All Episodes + Movie Combined</p>
         <p id="uploadDate" class="text-gray-600 text-sm">Uploaded: 2025-04-25</p>
       </div>
     </div>
@@ -65,7 +65,7 @@
 
   </div>
 
-  <!-- Ad Box (old rotating ads) -->
+  <!-- Ad Box (rotating ads) -->
   <div id="adBox">
     <button id="closeAd" aria-label="Close ad">×</button>
     <div class="ad-slot active" id="ad1">
@@ -97,9 +97,9 @@
 
     const episodes = [
       {
-        title: "chainsaw man all episodes in one video+ movie",
+        title: "Chainsaw Man - Full Video",
         link: "https://drive.google.com/file/d/1EFLsCYYSZ_0W0ovHCepvqUFIrZXEaH-V/preview",
-        description: "Do_Patti_(2024)_Hindi_Movie.",
+        description: "Chainsaw Man - All Episodes + Movie Combined",
         uploadDate: "2025-04-25"
       }
     ];
@@ -160,4 +160,4 @@
     });
   </script>
 </body>
-    </html>
+</html>
