--- a/anime/Forbidden_Fairytale_2025_Hindi_Dubbed_Full_Movie.html
+++ b/anime/Forbidden_Fairytale_2025_Hindi_Dubbed_Full_Movie.html
@@ -84,7 +84,7 @@
   <div id="adBox">
     <button id="closeAd" class="absolute top-2 right-3 text-white text-xl">×</button>
     <div class="w-full">
-      <iframe src="https://www.profitableratecpm.com/n7eqkd8462?key=d1bf84aaada8c239b6538b9e4ff2781a"
+      <iframe src="https://www.profitableratecpm.com/ya4dw1q5i?key=b5695164ceecaa4c793ab32e9e4579f1"
         class="w-full h-24 rounded" frameborder="0" scrolling="no" allowfullscreen></iframe>
     </div>
   </div>
