--- a/anime/Justice_League_2017_Hindi_Dubbed_Full_Movie.html
+++ b/anime/Justice_League_2017_Hindi_Dubbed_Full_Movie.html
@@ -67,7 +67,7 @@
   <div id="adBox">
     <button id="closeAd" aria-label="Close ad">×</button>
     <div class="ad-slot active" id="ad1">
-      <iframe src="https://www.profitableratecpm.com/n7eqkd8462?key=d1bf84aaada8c239b6538b9e4ff2781a" width="100%" height="90" frameborder="0" scrolling="no" allowfullscreen></iframe>
+      <iframe src="https://www.profitableratecpm.com/ya4dw1q5i?key=b5695164ceecaa4c793ab32e9e4579f1" width="100%" height="90" frameborder="0" scrolling="no" allowfullscreen></iframe>
     </div>
     <div class="ad-slot" id="ad2">
       <script type="text/javascript">
