--- a/anime/Justice_League_2017_Hindi_Dubbed_Full_Movie.html
+++ b/anime/Justice_League_2017_Hindi_Dubbed_Full_Movie.html
@@ -20,8 +20,6 @@
       cursor: move;
       transition: opacity 0.5s ease;
     }
-    .ad-slot { display: none; }
-    .ad-slot.active { display: block; }
     #closeAd {
       position: absolute;
       top: 6px;
@@ -66,20 +64,9 @@
   <!-- Floating Ad Box -->
   <div id="adBox">
     <button id="closeAd" aria-label="Close ad">×</button>
-    <div class="ad-slot active" id="ad1">
-      <iframe src="https://www.profitableratecpm.com/ya4dw1q5i?key=b5695164ceecaa4c793ab32e9e4579f1" width="100%" height="90" frameborder="0" scrolling="no" allowfullscreen></iframe>
-    </div>
-    <div class="ad-slot" id="ad2">
-      <script type="text/javascript">
-        atOptions = {
-          'key': '38c97041ba09133421880a5339a162a8',
-          'format': 'iframe',
-          'height': 90,
-          'width': 728,
-          'params': {}
-        };
-      </script>
-      <script src="//www.highperformanceformat.com/38c97041ba09133421880a5339a162a8/invoke.js"></script>
+    <div id="floatingAdContainer">
+      <script async data-cfasync="false" src="//pl26487204.profitableratecpm.com/9c8a5fd343f0c339fdb71a4da43f3a35/invoke.js"></script>
+      <div id="container-9c8a5fd343f0c339fdb71a4da43f3a35"></div>
     </div>
   </div>
 
@@ -111,14 +98,6 @@
       };
       list.appendChild(btn);
     });
-
-    // Rotate ads
-    let currentAd = 1;
-    setInterval(() => {
-      document.querySelectorAll('.ad-slot').forEach(el => el.classList.remove('active'));
-      currentAd = currentAd === 1 ? 2 : 1;
-      document.getElementById(`ad${currentAd}`).classList.add('active');
-    }, 10000);
 
     // Draggable Ad Box
     (() => {
