--- a/anime/Avengers_Endgame_2019_Dual_Audio_Hindi_Dubbed.html
+++ b/anime/Avengers_Endgame_2019_Dual_Audio_Hindi_Dubbed.html
@@ -7,7 +7,12 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
     @media (max-width: 640px) {
-      #adBox { bottom: 1rem; right: 1rem; width: 95vw; }
+      .ad-container { width: 95vw; }
+    }
+    .ad-container {
+      width: 100%;
+      max-width: 728px;
+      margin: 20px auto;
     }
   </style>
 </head>
@@ -37,17 +42,25 @@
       <div id="episodeList" class="space-y-3"></div>
     </section>
 
-    <!-- Inline Ad -->
-    <section class="mt-10">
-      <div id="container-9c8a5fd343f0c339fdb71a4da43f3a35"></div>
-      <script async data-cfasync="false" src="//pl26487204.profitableratecpm.com/9c8a5fd343f0c339fdb71a4da43f3a35/invoke.js"></script>
+    <!-- Auto-Refreshing Ads -->
+    <section class="mt-10 text-center">
+      <h3 class="text-lg font-semibold mb-4">Sponsored Ads</h3>
+      <div class="ad-container">
+        <iframe id="ad1" src="https://www.profitableratecpm.com/ya4dw1q5i?key=b5695164ceecaa4c793ab32e9e4579f1" frameborder="0" width="100%" height="90" scrolling="no"></iframe>
+      </div>
+      <div class="ad-container">
+        <iframe id="ad2" src="https://www.profitableratecpm.com/zstjddy20y?key=bd80ed79e02a9b21793e8253c54d4ec1" frameborder="0" width="100%" height="90" scrolling="no"></iframe>
+      </div>
+      <div class="ad-container">
+        <iframe id="ad3" src="https://www.profitableratecpm.com/zwdx8nvb?key=00fcac8229b5807d1b638c111f5273f9" frameborder="0" width="100%" height="90" scrolling="no"></iframe>
+      </div>
+      <div class="ad-container">
+        <iframe id="ad4" src="https://www.profitableratecpm.com/sf9h6ikx?key=25d87d94939190ddff9fa5cb0edf81df" frameborder="0" width="100%" height="90" scrolling="no"></iframe>
+      </div>
+      <div class="ad-container">
+        <iframe id="ad5" src="https://www.profitableratecpm.com/qusnb8n8?key=d965c8699553fa2a225881c92e8494fe" frameborder="0" width="100%" height="90" scrolling="no"></iframe>
+      </div>
     </section>
-
-    <!-- New Fixed Ad Box -->
-    <div style="position:fixed; bottom:20px; right:20px; width:100%; max-width:728px; z-index:1000;">
-      <div id="container-9c8a5fd343f0c339fdb71a4da43f3a35-box"></div>
-      <script async data-cfasync="false" src="//pl26487204.profitableratecpm.com/9c8a5fd343f0c339fdb71a4da43f3a35/invoke.js"></script>
-    </div>
   </div>
 
   <script>
@@ -78,6 +91,15 @@
       };
       list.appendChild(btn);
     });
+
+    // Auto-refresh ad iframes every 30 seconds
+    setInterval(() => {
+      for (let i = 1; i <= 5; i++) {
+        const iframe = document.getElementById(`ad${i}`);
+        const src = iframe.src;
+        iframe.src = src; // reload iframe
+      }
+    }, 30000); // 30 seconds
   </script>
 </body>
 </html>
