--- a/anime/Tokyo Revengers season 1.html
+++ b/anime/Tokyo Revengers season 1.html
@@ -12,30 +12,19 @@
       right: 20px;
       width: 90vw;
       max-width: 728px;
-      background-color: #374151;
+      background-color: #1f2937;
       padding: 12px;
       border-radius: 8px;
       box-shadow: 0 0 10px rgba(0,0,0,0.4);
       z-index: 1000;
-      cursor: move;
-      transition: opacity 0.5s ease;
     }
-    #adBox.hidden { opacity: 0; pointer-events: none; }
-    .ad-slot { display: none; }
-    .ad-slot.active { display: block; }
-    #closeAd {
-      position: absolute;
-      top: 6px;
-      right: 8px;
-      background: transparent;
+    #adBox iframe {
+      width: 100%;
+      height: 90px;
       border: none;
-      color: white;
-      font-size: 1.25rem;
-      line-height: 1;
-      cursor: pointer;
     }
     @media (max-width: 640px) {
-      #adBox { bottom: 1rem; right: 1rem; }
+      #adBox { width: 95vw; bottom: 1rem; right: 1rem; }
     }
   </style>
 </head>
@@ -59,99 +48,25 @@
     <div id="episodeList" class="space-y-3"></div>
   </div>
 
-  <!-- Ad Box -->
-  <div id="adBox" onmouseenter="showAdBox()" onmouseleave="startAutoHide()">
-    <button id="closeAd" aria-label="Close ad">×</button>
-    <div class="ad-slot active" id="ad1">
-      <script type="text/javascript">
-        atOptions = {
-          'key': '38c97041ba09133421880a5339a162a8',
-          'format': 'iframe',
-          'height': 90,
-          'width': 728,
-          'params': {}
-        };
-      </script>
-      <script src="//www.highperformanceformat.com/38c97041ba09133421880a5339a162a8/invoke.js"></script>
-    </div>
+  <!-- Fixed Ad Box -->
+  <div id="adBox">
+    <iframe id="adFrame" src="https://www.profitableratecpm.com/ya4dw1q5i?key=b5695164ceecaa4c793ab32e9e4579f1" allowfullscreen scrolling="no"></iframe>
   </div>
 
-  <script type="text/javascript">
-    window.onbeforeunload = null; // remove "leave site?" prompt
-
+  <script>
     const episodes = [
-      {
-        title: "Tokyo Revengers season 1 episode 1",
-        link: "https://drive.google.com/file/d/1tKWemYXcfasBzfLbw0s8rPRKBuVG_yKM/preview",
-        description: "Tokyo Revengers season 1 episode 1.",
-        uploadDate: "2025-04-25"
-      },
-      {
-        title: "Tokyo Revengers season 1 episode 2",
-        link: "https://drive.google.com/file/d/1sQd1Js90SYFtM9RWpA_B6KzcKRM1Gjwn/preview",
-        description: "Tokyo Revengers season 1 episode 2.",
-        uploadDate: "2025-04-25"
-      },
-      {
-        title: "Tokyo Revengers season 1 episode 3",
-        link: "https://drive.google.com/file/d/1r3U1WRijwgyOr3Ja1Giok0o3WDkDRmku/preview",
-        description: "Tokyo Revengers season 1 episode 3.",
-        uploadDate: "2025-04-25"
-      },
-      {
-        title: "Tokyo Revengers season 1 episode 4",
-        link: "https://drive.google.com/file/d/1bUnNv1ZBxbAc0oHqFHHeFhByD9bUntO2/preview",
-        description: "Tokyo Revengers season 1 episode 4.",
-        uploadDate: "2025-04-25"
-      },
-      {
-        title: "Tokyo Revengers season 1 episode 5",
-        link: "https://drive.google.com/file/d/1TFfHIQs_85FPoAU4weBNfzItGMO_4OmR/preview",
-        description: "Tokyo Revengers season 1 episode 5.",
-        uploadDate: "2025-04-25"
-      },
-      {
-        title: "Tokyo Revengers season 1 episode 6",
-        link: "https://drive.google.com/file/d/1__at6n4XpQHRHkQM4PP6Gth50NFO6x7M/preview",
-        description: "Tokyo Revengers season 1 episode 6.",
-        uploadDate: "2025-04-25"
-      },
-      {
-        title: "Tokyo Revengers season 1 episode 7",
-        link: "https://drive.google.com/file/d/1yDeN6__2_JMo1I4aG-op_Zj4BQvGxX-q/preview",
-        description: "Tokyo Revengers season 1 episode 7.",
-        uploadDate: "2025-04-25"
-      },
-      {
-        title: "Tokyo Revengers season 1 episode 8",
-        link: "https://drive.google.com/file/d/1yDeN6__2_JMo1I4aG-op_Zj4BQvGxX-q/preview",
-        description: "Tokyo Revengers season 1 episode 8.",
-        uploadDate: "2025-04-25"
-      },
-      {
-        title: "Tokyo Revengers season 1 episode 9",
-        link: "https://drive.google.com/file/d/1kp2-ANWMmbUc_ZThWZzFTfrT1EDatiG-/preview",
-        description: "Tokyo Revengers season 1 episode 9.",
-        uploadDate: "2025-04-25"
-      },
-      {
-        title: "Tokyo Revengers season 1 episode 10",
-        link: "https://drive.google.com/file/d/1kKeVnD32t7UDrXZgEIpp9vjeyqZbq2v3/preview",
-        description: "Tokyo Revengers season 1 episode 10.",
-        uploadDate: "2025-04-25"
-      },
-      {
-        title: "Tokyo Revengers season 1 episode 11",
-        link: "https://drive.google.com/file/d/1HQxEHozD1ApyoLQHiIhl27DZ6Z6TESVm/preview",
-        description: "Tokyo Revengers season 1 episode 11.",
-        uploadDate: "2025-04-25"
-      },
-      {
-        title: "Tokyo Revengers season 1 episode 12",
-        link: "https://drive.google.com/file/d/1ed7Xq6wPTjM1535FGoMQWElq9ePRfaMy/preview",
-        description: "Tokyo Revengers season 1 episode 12.",
-        uploadDate: "2025-04-25"
-      }
+      { title: "Tokyo Revengers season 1 episode 1", link: "https://drive.google.com/file/d/1tKWemYXcfasBzfLbw0s8rPRKBuVG_yKM/preview", description: "Tokyo Revengers season 1 episode 1.", uploadDate: "2025-04-25" },
+      { title: "Tokyo Revengers season 1 episode 2", link: "https://drive.google.com/file/d/1sQd1Js90SYFtM9RWpA_B6KzcKRM1Gjwn/preview", description: "Tokyo Revengers season 1 episode 2.", uploadDate: "2025-04-25" },
+      { title: "Tokyo Revengers season 1 episode 3", link: "https://drive.google.com/file/d/1r3U1WRijwgyOr3Ja1Giok0o3WDkDRmku/preview", description: "Tokyo Revengers season 1 episode 3.", uploadDate: "2025-04-25" },
+      { title: "Tokyo Revengers season 1 episode 4", link: "https://drive.google.com/file/d/1bUnNv1ZBxbAc0oHqFHHeFhByD9bUntO2/preview", description: "Tokyo Revengers season 1 episode 4.", uploadDate: "2025-04-25" },
+      { title: "Tokyo Revengers season 1 episode 5", link: "https://drive.google.com/file/d/1TFfHIQs_85FPoAU4weBNfzItGMO_4OmR/preview", description: "Tokyo Revengers season 1 episode 5.", uploadDate: "2025-04-25" },
+      { title: "Tokyo Revengers season 1 episode 6", link: "https://drive.google.com/file/d/1__at6n4XpQHRHkQM4PP6Gth50NFO6x7M/preview", description: "Tokyo Revengers season 1 episode 6.", uploadDate: "2025-04-25" },
+      { title: "Tokyo Revengers season 1 episode 7", link: "https://drive.google.com/file/d/1yDeN6__2_JMo1I4aG-op_Zj4BQvGxX-q/preview", description: "Tokyo Revengers season 1 episode 7.", uploadDate: "2025-04-25" },
+      { title: "Tokyo Revengers season 1 episode 8", link: "https://drive.google.com/file/d/1yDeN6__2_JMo1I4aG-op_Zj4BQvGxX-q/preview", description: "Tokyo Revengers season 1 episode 8.", uploadDate: "2025-04-25" },
+      { title: "Tokyo Revengers season 1 episode 9", link: "https://drive.google.com/file/d/1kp2-ANWMmbUc_ZThWZzFTfrT1EDatiG-/preview", description: "Tokyo Revengers season 1 episode 9.", uploadDate: "2025-04-25" },
+      { title: "Tokyo Revengers season 1 episode 10", link: "https://drive.google.com/file/d/1kKeVnD32t7UDrXZgEIpp9vjeyqZbq2v3/preview", description: "Tokyo Revengers season 1 episode 10.", uploadDate: "2025-04-25" },
+      { title: "Tokyo Revengers season 1 episode 11", link: "https://drive.google.com/file/d/1HQxEHozD1ApyoLQHiIhl27DZ6Z6TESVm/preview", description: "Tokyo Revengers season 1 episode 11.", uploadDate: "2025-04-25" },
+      { title: "Tokyo Revengers season 1 episode 12", link: "https://drive.google.com/file/d/1ed7Xq6wPTjM1535FGoMQWElq9ePRfaMy/preview", description: "Tokyo Revengers season 1 episode 12.", uploadDate: "2025-04-25" }
     ];
 
     const list = document.getElementById('episodeList');
@@ -160,7 +75,7 @@
     const desc = document.getElementById('episodeDesc');
     const date = document.getElementById('uploadDate');
 
-    episodes.forEach((ep) => {
+    episodes.forEach(ep => {
       const btn = document.createElement('button');
       btn.className = "w-full text-left bg-gray-800 hover:bg-gray-700 rounded p-3 shadow";
       btn.innerText = ep.title;
@@ -173,47 +88,19 @@
       list.appendChild(btn);
     });
 
-    // Auto-hide ads
-    let hideTimeout;
-    function startAutoHide() {
-      clearTimeout(hideTimeout);
-      hideTimeout = setTimeout(() => {
-        document.getElementById('adBox').classList.add('hidden');
-      }, 30000);
-    }
-    function showAdBox() {
-      clearTimeout(hideTimeout);
-      document.getElementById('adBox').classList.remove('hidden');
-    }
-    startAutoHide();
-
-    // Draggable
-    (function() {
-      const box = document.getElementById('adBox');
-      let offsetX, offsetY, dragging = false;
-      box.addEventListener('mousedown', e => {
-        dragging = true;
-        offsetX = e.clientX - box.offsetLeft;
-        offsetY = e.clientY - box.offsetTop;
-        document.body.style.userSelect = 'none';
-      });
-      document.addEventListener('mousemove', e => {
-        if (!dragging) return;
-        box.style.left = `${e.clientX - offsetX}px`;
-        box.style.top = `${e.clientY - offsetY}px`;
-        box.style.bottom = 'auto';
-        box.style.right  = 'auto';
-      });
-      document.addEventListener('mouseup', () => {
-        dragging = false;
-        document.body.style.userSelect = '';
-      });
-    })();
-
-    // Close ad
-    document.getElementById('closeAd').addEventListener('click', () => {
-      document.getElementById('adBox').style.display = 'none';
-    });
+    // Rotate ad links
+    const adLinks = [
+      "https://www.profitableratecpm.com/ya4dw1q5i?key=b5695164ceecaa4c793ab32e9e4579f1",
+      "https://www.profitableratecpm.com/zstjddy20y?key=bd80ed79e02a9b21793e8253c54d4ec1",
+      "https://www.profitableratecpm.com/zwdx8nvb?key=00fcac8229b5807d1b638c111f5273f9",
+      "https://www.profitableratecpm.com/sf9h6ikx?key=25d87d94939190ddff9fa5cb0edf81df",
+      "https://www.profitableratecpm.com/qusnb8n8?key=d965c8699553fa2a225881c92e8494fe"
+    ];
+    let adIndex = 0;
+    setInterval(() => {
+      adIndex = (adIndex + 1) % adLinks.length;
+      document.getElementById("adFrame").src = adLinks[adIndex];
+    }, 15000); // refresh every 15 seconds
   </script>
 </body>
 </html>
