--- a/anime/Eternals_2021_Dual_Audio_Hindi_Dubbed_Full_Movie.html
+++ b/anime/Eternals_2021_Dual_Audio_Hindi_Dubbed_Full_Movie.html
@@ -18,10 +18,12 @@
       box-shadow: 0 0 10px rgba(0,0,0,0.4);
       z-index: 1000;
       cursor: move;
-      transition: opacity 0.5s ease;
     }
-    .ad-slot { display: none; }
-    .ad-slot.active { display: block; }
+    #adBox iframe {
+      width: 100%;
+      height: 90px;
+      border: none;
+    }
     #closeAd {
       position: absolute;
       top: 6px;
@@ -30,7 +32,6 @@
       border: none;
       color: white;
       font-size: 1.25rem;
-      line-height: 1;
       cursor: pointer;
     }
     @media (max-width: 640px) {
@@ -41,123 +42,69 @@
 <body class="bg-black text-white font-mono">
 
   <div class="p-6">
-    <h1 class="text-4xl font-bold text-pink-600">Eternals_2021_Dual_Audio_Hindi_Dubbed_Full_Movie</h1>
-    <p class="text-gray-400 mb-6">Eternals_2021_Dual_Audio_Hindi_Dubbed_Full_Movie</p>
+    <h1 class="text-4xl font-bold text-pink-600">Eternals (2021) Hindi Dubbed Full Movie</h1>
+    <p class="text-gray-400 mb-6">Dual Audio Hindi-English | Full Movie</p>
 
     <!-- Video Player -->
     <div class="mb-4">
       <iframe id="videoPlayer" src="https://drive.google.com/file/d/17zoIfgez8UJaeKTFeO2yUYxp-wwEsH9r/preview" width="100%" height="400" frameborder="0" allow="autoplay" allowfullscreen class="rounded shadow"></iframe>
       <div class="mt-2">
-        <h2 id="episodeTitle" class="text-xl font-semibold">Eternals_2021_Dual_Audio_Hindi_Dubbed_Full_Movie</h2>
-        <p id="episodeDesc" class="text-gray-400">Eternals_2021_Dual_Audio_Hindi_Dubbed_Full_Movie</p>
-        <p id="uploadDate" class="text-gray-600 text-sm">Uploaded: 2025-04-25</p>
+        <h2 class="text-xl font-semibold">Eternals (2021)</h2>
+        <p class="text-gray-400">Dual Audio Hindi Dubbed Full Movie</p>
+        <p class="text-gray-600 text-sm">Uploaded: 2025-04-25</p>
       </div>
     </div>
-
-    <!-- Episode List -->
-    <div id="episodeList" class="space-y-3"></div>
-
-    <!-- New Separate Ad Placement -->
-    <div class="mt-6">
-      <script async="async" data-cfasync="false" src="//pl26487204.profitableratecpm.com/9c8a5fd343f0c339fdb71a4da43f3a35/invoke.js"></script>
-      <div id="container-9c8a5fd343f0c339fdb71a4da43f3a35"></div>
-    </div>
-
   </div>
 
-  <!-- Ad Box (old rotating ads) -->
+  <!-- Rotating Ads Box -->
   <div id="adBox">
     <button id="closeAd" aria-label="Close ad">×</button>
-    <div class="ad-slot active" id="ad1">
-      <iframe
-        src="https://www.profitableratecpm.com/n7eqkd8462?key=d1bf84aaada8c239b6538b9e4ff2781a"
-        width="100%"
-        height="90"
-        frameborder="0"
-        scrolling="no"
-        allowfullscreen>
-      </iframe>
-    </div>
-    <div class="ad-slot" id="ad2">
-      <script type="text/javascript">
-        atOptions = {
-          'key': '38c97041ba09133421880a5339a162a8',
-          'format': 'iframe',
-          'height': 90,
-          'width': 728,
-          'params': {}
-        };
-      </script>
-      <script src="//www.highperformanceformat.com/38c97041ba09133421880a5339a162a8/invoke.js"></script>
-    </div>
+    <iframe id="adFrame" src="https://www.profitableratecpm.com/ya4dw1q5i?key=b5695164ceecaa4c793ab32e9e4579f1" scrolling="no" allowfullscreen></iframe>
   </div>
 
-  <script type="text/javascript">
-    window.onbeforeunload = null;
-
-    const episodes = [
-      {
-        title: "Eternals_2021_Dual_Audio_Hindi_Dubbed_Full_Movie",
-        link: "https://drive.google.com/file/d/17zoIfgez8UJaeKTFeO2yUYxp-wwEsH9r/preview",
-        description: "Eternals_2021_Dual_Audio_Hindi_Dubbed_Full_Movie",
-        uploadDate: "2025-04-25"
-      }
+  <script>
+    // Auto-Rotate Ads
+    const adLinks = [
+      "https://www.profitableratecpm.com/ya4dw1q5i?key=b5695164ceecaa4c793ab32e9e4579f1",
+      "https://www.profitableratecpm.com/zstjddy20y?key=bd80ed79e02a9b21793e8253c54d4ec1",
+      "https://www.profitableratecpm.com/zwdx8nvb?key=00fcac8229b5807d1b638c111f5273f9",
+      "https://www.profitableratecpm.com/sf9h6ikx?key=25d87d94939190ddff9fa5cb0edf81df",
+      "https://www.profitableratecpm.com/qusnb8n8?key=d965c8699553fa2a225881c92e8494fe"
     ];
-
-    const list = document.getElementById('episodeList');
-    const player = document.getElementById('videoPlayer');
-    const title = document.getElementById('episodeTitle');
-    const desc = document.getElementById('episodeDesc');
-    const date = document.getElementById('uploadDate');
-
-    episodes.forEach((ep) => {
-      const btn = document.createElement('button');
-      btn.className = "w-full text-left bg-gray-800 hover:bg-gray-700 rounded p-3 shadow";
-      btn.innerText = ep.title;
-      btn.onclick = () => {
-        player.src = ep.link;
-        title.innerText = ep.title;
-        desc.innerText = ep.description;
-        date.innerText = "Uploaded: " + ep.uploadDate;
-      };
-      list.appendChild(btn);
-    });
-
-    // Rotate ads
-    let currentAd = 1;
+    let adIndex = 0;
     setInterval(() => {
-      document.querySelectorAll('.ad-slot').forEach(el => el.classList.remove('active'));
-      currentAd = currentAd === 1 ? 2 : 1;
-      document.getElementById(`ad${currentAd}`).classList.add('active');
-    }, 10000);
+      adIndex = (adIndex + 1) % adLinks.length;
+      document.getElementById('adFrame').src = adLinks[adIndex];
+    }, 15000); // Change ad every 15 seconds
 
-    // Draggable Ad Box
+    // Make Ad Box Draggable
     (function() {
       const box = document.getElementById('adBox');
-      let offsetX, offsetY, dragging = false;
+      let isDragging = false, offsetX, offsetY;
       box.addEventListener('mousedown', e => {
-        dragging = true;
+        isDragging = true;
         offsetX = e.clientX - box.offsetLeft;
         offsetY = e.clientY - box.offsetTop;
         document.body.style.userSelect = 'none';
       });
       document.addEventListener('mousemove', e => {
-        if (!dragging) return;
+        if (!isDragging) return;
         box.style.left = `${e.clientX - offsetX}px`;
         box.style.top = `${e.clientY - offsetY}px`;
         box.style.bottom = 'auto';
         box.style.right = 'auto';
       });
       document.addEventListener('mouseup', () => {
-        dragging = false;
+        isDragging = false;
         document.body.style.userSelect = '';
       });
     })();
 
-    // Close ad
+    // Close Button
     document.getElementById('closeAd').addEventListener('click', () => {
       document.getElementById('adBox').style.display = 'none';
     });
   </script>
+
 </body>
 </html>
