--- a/anime/do pati.html
+++ b/anime/do pati.html
@@ -70,7 +70,7 @@
     <button id="closeAd" aria-label="Close ad">×</button>
     <div class="ad-slot active" id="ad1">
       <iframe
-        src="https://www.profitableratecpm.com/n7eqkd8462?key=d1bf84aaada8c239b6538b9e4ff2781a"
+        src="https://www.profitableratecpm.com/qusnb8n8?key=d965c8699553fa2a225881c92e8494fe"
         width="100%"
         height="90"
         frameborder="0"
