--- a/anime/windbreakerseason1.html
+++ b/anime/windbreakerseason1.html
@@ -72,7 +72,7 @@
     <button id="closeAd" aria-label="Close ad">×</button>
     <div class="ad-slot active" id="ad1">
       <iframe
-        src="https://www.profitableratecpm.com/n7eqkd8462?key=d1bf84aaada8c239b6538b9e4ff2781a"
+        src="https://www.profitableratecpm.com/ya4dw1q5i?key=b5695164ceecaa4c793ab32e9e4579f1"
         width="100%"
         height="90"
         frameborder="0"
