--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
     <p class="mb-8">Your next binge-worthy obsession is just a click away. Welcome home!</p>
 
     <div class="flex justify-center gap-6">
-      <a href="support.html" class="button">Support Us</a>
+      <a href="https://supportkenovo.work.gd/" class="button">Support Us</a>
       <a href="copyright.html" class="button">Copyright Info</a>
     </div>
   </div>
