--- a/anime/Eternals_2021_Dual_Audio_Hindi_Dubbed_Full_Movie.html
+++ b/anime/Eternals_2021_Dual_Audio_Hindi_Dubbed_Full_Movie.html
@@ -5,42 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Eternals (2021) - Dual Audio Hindi Dubbed</title>
   <script src="https://cdn.tailwindcss.com"></script>
-  <style>
-    #adBox {
-      position: fixed;
-      bottom: 20px;
-      right: 20px;
-      width: 90vw;
-      max-width: 728px;
-      background-color: #374151;
-      padding: 12px;
-      border-radius: 8px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.4);
-      z-index: 1000;
-      cursor: move;
-      transition: opacity 0.5s ease;
-    }
-    .ad-slot { display: none; }
-    .ad-slot.active { display: block; }
-    #closeAd {
-      position: absolute;
-      top: 6px;
-      right: 8px;
-      background: transparent;
-      border: none;
-      color: white;
-      font-size: 1.25rem;
-      cursor: pointer;
-    }
-    @media (max-width: 640px) {
-      #adBox { bottom: 1rem; right: 1rem; width: calc(100vw - 2rem); }
-    }
-  </style>
 </head>
 <body class="bg-black text-white font-mono">
 
   <main class="max-w-4xl mx-auto p-4 sm:p-6">
-    <header class="mb-6">
+    <header class="mb-6 text-center">
       <h1 class="text-3xl sm:text-4xl font-bold text-pink-600">Eternals (2021) - Dual Audio Hindi Dubbed</h1>
       <p class="text-gray-400">Full Movie in Hindi and English | 2021 | HD Quality</p>
     </header>
@@ -48,8 +17,10 @@
     <!-- Video Player Section -->
     <section class="mb-8">
       <div class="aspect-w-16 aspect-h-9">
-        <iframe id="videoPlayer" src="https://drive.google.com/file/d/17zoIfgez8UJaeKTFeO2yUYxp-wwEsH9r/preview"
-          class="w-full h-[400px] rounded shadow" frameborder="0" allow="autoplay" allowfullscreen></iframe>
+        <iframe id="videoPlayer"
+          src="https://drive.google.com/file/d/17zoIfgez8UJaeKTFeO2yUYxp-wwEsH9r/preview"
+          class="w-full h-[400px] rounded shadow" frameborder="0" allow="autoplay" allowfullscreen>
+        </iframe>
       </div>
       <div class="mt-4">
         <h2 id="episodeTitle" class="text-xl font-semibold">Eternals (2021) - Dual Audio</h2>
@@ -60,40 +31,8 @@
 
     <!-- Episode Buttons -->
     <section id="episodeList" class="space-y-3 mb-10"></section>
-
-    <!-- Inline Ad Placement -->
-    <section class="mt-8">
-      <script async data-cfasync="false" src="//pl26487204.profitableratecpm.com/9c8a5fd343f0c339fdb71a4da43f3a35/invoke.js"></script>
-      <div id="container-9c8a5fd343f0c339fdb71a4da43f3a35"></div>
-    </section>
   </main>
 
-  <!-- Floating Draggable Ad Box -->
-  <div id="adBox">
-    <button id="closeAd" aria-label="Close ad">×</button>
-    <div class="ad-slot active" id="ad1">
-      <iframe src="https://www.profitableratecpm.com/ya4dw1q5i?key=b5695164ceecaa4c793ab32e9e4579f1"
-        width="100%" height="90" frameborder="0" scrolling="no" allowfullscreen></iframe>
-    </div>
-    <div class="ad-slot" id="ad2">
-      <iframe src="https://www.profitableratecpm.com/zstjddy20y?key=bd80ed79e02a9b21793e8253c54d4ec1"
-        width="100%" height="90" frameborder="0" scrolling="no" allowfullscreen></iframe>
-    </div>
-    <div class="ad-slot" id="ad3">
-      <iframe src="https://www.profitableratecpm.com/zwdx8nvb?key=00fcac8229b5807d1b638c111f5273f9"
-        width="100%" height="90" frameborder="0" scrolling="no" allowfullscreen></iframe>
-    </div>
-    <div class="ad-slot" id="ad4">
-      <iframe src="https://www.profitableratecpm.com/sf9h6ikx?key=25d87d94939190ddff9fa5cb0edf81df"
-        width="100%" height="90" frameborder="0" scrolling="no" allowfullscreen></iframe>
-    </div>
-    <div class="ad-slot" id="ad5">
-      <iframe src="https://www.profitableratecpm.com/qusnb8n8?key=d965c8699553fa2a225881c92e8494fe"
-        width="100%" height="90" frameborder="0" scrolling="no" allowfullscreen></iframe>
-    </div>
-  </div>
-
-  <!-- Scripts -->
   <script>
     const episodes = [
       {
@@ -121,42 +60,6 @@
         date.innerText = "Uploaded: " + ep.uploadDate;
       };
       list.appendChild(btn);
-    });
-
-    // Ad Rotation
-    let currentAd = 1;
-    setInterval(() => {
-      document.querySelectorAll('.ad-slot').forEach(el => el.classList.remove('active'));
-      currentAd = currentAd === 1 ? 2 : (currentAd === 2 ? 3 : (currentAd === 3 ? 4 : (currentAd === 4 ? 5 : 1)));
-      document.getElementById(`ad${currentAd}`).classList.add('active');
-    }, 15000); // Change ad every 15 seconds
-
-    // Draggable Ad Box
-    (() => {
-      const box = document.getElementById('adBox');
-      let offsetX, offsetY, dragging = false;
-      box.addEventListener('mousedown', e => {
-        dragging = true;
-        offsetX = e.clientX - box.offsetLeft;
-        offsetY = e.clientY - box.offsetTop;
-        document.body.style.userSelect = 'none';
-      });
-      document.addEventListener('mousemove', e => {
-        if (!dragging) return;
-        box.style.left = `${e.clientX - offsetX}px`;
-        box.style.top = `${e.clientY - offsetY}px`;
-        box.style.bottom = 'auto';
-        box.style.right = 'auto';
-      });
-      document.addEventListener('mouseup', () => {
-        dragging = false;
-        document.body.style.userSelect = '';
-      });
-    })();
-
-    // Close Ad Button
-    document.getElementById('closeAd').addEventListener('click', () => {
-      document.getElementById('adBox').style.display = 'none';
     });
   </script>
 
